Fix - layout breaking on search result

--- a/assets/sass/responsive/_small.scss
+++ b/assets/sass/responsive/_small.scss
@@ -129,7 +129,8 @@
 	/*----------  Layout  ----------*/
 
 	.layout--right-sidebar,
-	.layout--left-sidebar {
+	.layout--left-sidebar,
+	.search-results {
 
 		#primary,
 		#secondary {
